fixes #34, removes whitespace between filter and carousel

--- a/stylesheets/partials/features/_content.scss
+++ b/stylesheets/partials/features/_content.scss
@@ -7,6 +7,10 @@ body {
 	padding-bottom: 60px;
 	padding-top: 60px;
 	position: relative;
+
+	&.home {
+		padding-top: 0;
+	}
 }
 
 @media screen and (max-width: $screen-sm) {
